--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ tf2-enum = "0.1.1"
 steamid-ng = "1.0.0"
 anyhow = "^1.0"
 thiserror = "^1.0.30"
+marketplace-sku = { version = "0", path = "../marketplace-sku" }
