added examples and changed response to read correct field for error message on an unsuccessful response

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,6 @@ steamid-ng = "1.0.0"
 anyhow = "^1.0"
 thiserror = "^1.0.30"
 marketplace-sku = { version = "0", path = "../marketplace-sku" }
+
+[dev-dependencies]
+tokio = { version = "1", features = ["full"] }
