--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ serde_repr = "0.1"
 strum = { version = "0.23", features = ["derive"] }
 strum_macros = "0.23"
 chrono = { version = "0.4", features = ["serde"] }
-tf2-enum = "0.1.1"
+tf2-enum = "^0.7.0"
 steamid-ng = "1.0.0"
 anyhow = "^1.0"
 thiserror = "^1.0.30"
