--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,19 +11,19 @@ keywords = ["tf2", "steam"]
 readme = "README.md"
 
 [dependencies]
-reqwest = { version = "^0.11.7", features = ["json", "cookies"] }
-reqwest-retry = "0.1.3"
-reqwest-middleware = "0.1.2"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-serde_with = "1.11.0"
-serde_repr = "0.1"
-strum = { version = "0.23", features = ["derive"] }
-strum_macros = "0.23"
-chrono = { version = "0.4", features = ["serde"] }
-steamid-ng = "1.0.0"
+reqwest = { version = "^0.12", features = ["json", "cookies", "gzip", "http2", "native-tls-alpn"], default-features = false }
+reqwest-retry = "^0.7"
+reqwest-middleware = "^0.4"
+serde = { version = "^1", features = ["derive"] }
+serde_json = "^1"
+serde_with = "^1.11"
+serde_repr = "^0.1"
+strum = { version = "^0.23", features = ["derive"] }
+strum_macros = "^0.23"
+chrono = { version = "^0.4", features = ["serde"] }
+steamid-ng = "^1.0"
 anyhow = "^1.0"
-thiserror = "^1.0.30"
+thiserror = "^2.0"
 tf2-sku = "^0.5.0"
 
 [dev-dependencies]
